--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
-Django==4.2.7
-python-dotenv==1.0.0
-Pillow==10.1.0
-django-crispy-forms==2.1
-crispy-bootstrap4==2022.1
-gunicorn==21.2.0
-whitenoise==6.6.0
-psycopg2-binary==2.9.9
-dj-database-url==2.1.0
+asgiref==3.8.1
+blinker==1.9.0
+click==8.1.8
+crispy-bootstrap4==2025.6
+dj-database-url==3.0.1
+Django==4.2
+django-crispy-forms==2.3
+django-ranged-response==0.2.0
+django-simple-captcha==0.6.2
+Flask==3.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+pillow==11.3.0
+psycopg2-binary==2.9.10
+python-dotenv==1.1.1
+setuptools==75.8.0
+sqlparse==0.5.3
+Werkzeug==3.1.3
+wheel==0.45.1
